# robin_bridge_generated

./: .rosinstall  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
include/robin_bridge_generated/: structs.h
launch/: robin_node_generated.launch  run.launch  run.sh
msg/: CameraMsg.msg  CommonCommand.msg  CommonFeedback.msg  Header_.msg  JointState.msg  MissionOptions.msg  PalletizingOptions.msg  PlcMsg.msg
scripts/: run_robin_bridge_generated.sh
src/: robin_node.cpp
src/robin_bridge_generated/: robin_inst.cpp
